# github-metrics

./: .gitignore  Makefile  README.md  github-metrics  pyproject.toml  setup.cfg
github_metrics/: __init__.py  __main__.py  main.py
